navtabs margins corrected so spacing is correct

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -46,6 +46,9 @@ svg.material-icons:not(:last-child) {
   background-color: #e8a87c;
   color:#1976d2;
   font-weight: bold;
+  padding: 8px 16px;
+  margin:0;
+  margin-right: -32px;
 }
 .card-body{
   max-width: 512px;
